@@ -38,6 +38,10 @@ import org.springframework.jdbc.core.BeanPropertyRowMapper;
  * String, boolean, Boolean, byte, Byte, short, Short, int, Integer, long, Long,
  * float, Float, double, Double, BigDecimal, <code>java.util.Date</code>, etc.
  *
+ * <p>The mapper can be configured to use the primitives default value when mapping null values by
+ * passing in 'true' for the 'primitivesDefaultedForNullValue' using the {@link #newInstance(Class, boolean)} method.
+ * Also see {@link BeanPropertyRowMapper#setPrimitivesDefaultedForNullValue(boolean)}
+ *
  * <p>To facilitate mapping between columns and fields that don't have matching names,
  * try using column aliases in the SQL statement like "select fname as first_name from customer".
  *
@@ -73,8 +77,19 @@ public class ParameterizedBeanPropertyRowMapper<T> extends BeanPropertyRowMapper
 	 * @param mappedClass the class that each row should be mapped to
 	 */
 	public static <T> ParameterizedBeanPropertyRowMapper<T> newInstance(Class<T> mappedClass) {
+		return newInstance(mappedClass, false);
+	}
+
+	/**
+	 * Static factory method to create a new ParameterizedBeanPropertyRowMapper
+	 * (with the mapped class specified only once).
+	 * @param mappedClass the class that each row should be mapped to
+	 */
+	public static <T> ParameterizedBeanPropertyRowMapper<T> newInstance(Class<T> mappedClass,
+			boolean primitivesDefaultedForNullValue) {
 		ParameterizedBeanPropertyRowMapper<T> newInstance = new ParameterizedBeanPropertyRowMapper<T>();
 		newInstance.setMappedClass(mappedClass);
+		newInstance.setPrimitivesDefaultedForNullValue(primitivesDefaultedForNullValue);
 		return newInstance;
 	}
 
